--- a/index.html
+++ b/index.html
@@ -252,7 +252,6 @@
                                     <h4 class="subheading">Huaxing 華興高中</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <!--<p class="text-danger">一類組</p>-->
                                 </div>
                             </div>
                         </li>
@@ -296,7 +295,7 @@
                                     <h4 class="subheading">Cola Tour 可樂旅遊</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-danger">系統營運工程師</p>
+                                    <p class="text-danger">系統研發工程師</p>
                                     <p class="text-muted">ASP.NET, C#, SQL, HTML5, CSS, JavaScript, jQuery</p>
                                 </div>
                             </div>
