--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- All CSS Plugins -->
     <link rel="stylesheet" type="text/css" href="css/plugin.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
     <!-- Main CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
@@ -133,14 +134,16 @@
                 <div class="about-me section-space-padding">
                     <h3>About Me.</h3>
                     <hr>
-                    <p>程式設計是我目前的主要工作，會讓我走上程式設計這條路是因為高中對電腦產生了興趣， 所以大學選擇了資訊工程系就讀，也因為資工系的課程內容讓我對程式設計有了基礎概念。 在學期間做了許多實作練習，也嘗試將我的專長與生活上做了結合，例如：架設工讀生班表網站、教室設常通知提醒程式、讀取期交所網站產生報表、台鐵購票小幫手、基金小工具...等，累積程式設計上相關經驗與解決問題的能力。
+                    <p>程式設計是我目前的主要工作，會讓我走上程式設計這條路是因為高中對電腦產生了興趣， 所以大學選擇了資訊工程系就讀，也因為資工系的課程內容讓我對程式設計有了基礎概念。 在學期間做了許多實作練習，也嘗試將我的專長與生活上做了結合，例如：架設工讀生班表網站、教室設備通知提醒程式、讀取期交所網站產生報表、台鐵購票小幫手、基金小工具...等，累積程式設計上相關經驗與解決問題的能力。
                     </p>
+                    <p>目前擁有3年以上的程式開發經驗，擅長ASP.NET、C#、JavaScript、資料庫等技術，具備程式架構設計的能力。主要範疇涵蓋電子商務、旅遊資訊及管理系統等。未來也希望能有更多的成長與發展的機會。</p>
                     <h3>My Savor</h3>
                     <hr>
                     <p>熱愛Coding和其他人一起合作開發
                         <br>
                         <br> 運動 : 羽球、桌球
                         <br> 休閒 : 跑步、尋找秘境、電影、美劇
+                        <br> 興趣 : 投資理財
                         <br> 座右銘 : 風吹柳動，未見柳折
                     </p>
                 </div>
@@ -163,7 +166,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <div class="abilities-detail">
-                        <i class="fa fa-html5 color-5"></i>
+                        <i class="fab fa-html5 fa-3x color-5"></i>
                         <h3>HTML5、CSS3</h3>
                         <hr>
                         <p>高中開始自學Html，對於HTML、CSS有基本的認知，目前用於網頁框架、頁面排版</p>
@@ -175,7 +178,7 @@
                         <i class="fa fa-code color-3"></i>
                         <h3>ASP.NET</h3>
                         <hr>
-                        <p>在學時，有使用過VB、C++，目前使用C#為主，撰寫功能、邏輯運算上的程式</p>
+                        <p>在學時，有使用過VB、C++，目前使用C#為主，撰寫功能、API串接、邏輯運算上的程式</p>
                     </div>
                 </div>
 
@@ -190,10 +193,10 @@
 
                 <div class="col-md-4 col-sm-6">
                     <div class="abilities-detail">
-                        <i class="fa fa-codepen color-6"></i>
+                        <i class="fab fa-js fa-3x color-6"></i>
                         <h3>JavaScript</h3>
                         <hr>
-                        <p>多用於網頁互動、Dom操作，畢業專題也是使用JS製作遊戲，相信未來JS會是主要趨勢，這部分仍要再自我學習</p>
+                        <p>使用ES5、ES6 於網頁上，相信未來JS會是主要趨勢，這部分仍有很多新技術要學習</p>
                     </div>
                 </div>
 
@@ -202,25 +205,34 @@
                         <i class="fa fa-file-code-o color-1"></i>
                         <h3>jQuery</h3>
                         <hr>
-                        <p>用於網頁互動或動畫效果、搭配Ajax與後端傳接值，但目前使用多是依賴它方便的選取器</p>
+                        <p>用於網頁互動或動畫效果、搭配Ajax與後端傳接值，目前使用多是依賴它方便的選取器</p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-6">
                     <div class="abilities-detail">
-                        <i class="fa fa-mobile color-1 color-4"></i>
+                        <i class="fas fa-mobile-alt fa-3x color-4"></i>
                         <h3>RWD Website</h3>
                         <hr>
-                        <p>使用Bootstrap框架打造響應式網站，目前看書自學中</p>
+                        <p>與設計部門合作，參與公司電子商務網站RWD改版，也有使用Bootstrap框架打造響應式網站相關經驗</p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-6">
                     <div class="abilities-detail">
-                        <i class="fa fa-ge"></i>
+                        <i class="fab fa-line fa-3x" style="color:green"></i>
+                        <h3>ChatBot</h3>
+                        <hr>
+                        <p>使用NodeJS+Heroku建立Line機器人，串接API及爬蟲來獲取相關資訊提供給使用者</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="abilities-detail">
+                        <i class="fab fa-github fa-3x"></i>
                         <h3>Others</h3>
                         <hr>
-                        <p>因興趣而略接觸過的:Sublime、VsCode、GitHub、AngularJS、VueJS</p>
+                        <p>VsCode、GitHub、AngularJS、Vue.js、NodeJS</p>
                     </div>
                 </div>
 
@@ -352,7 +364,7 @@
 
                     <div class="col-md-3 col-sm-6">
                         <div class="statistics">
-                            <div class="statistics-icon"><i class="fa fa-check-square-o color-1"></i>
+                            <div class="statistics-icon"><i class="far fa-check-square color-1"></i>
                             </div>
                             <div class="statistics-content">
                                 <h5><span data-count="9000" class="statistics-count">9000</span></h5><span>Projects Done</span>
@@ -414,7 +426,7 @@
 
                     <div class="col-md-4 col-sm-4">
                         <div class="contact-us-detail">
-                            <i class="fa fa-mobile color-6"></i>
+                            <i class="fas fa-mobile-alt color-6"></i>
                             <!--<p><a href="tel:+1234567890">+1234 567 890</a></p>-->
                             <p><a href="javascript: alert('歡迎使用email聯繫')">Secret</a></p>
                         </div>
@@ -422,14 +434,14 @@
 
                     <div class="col-md-4 col-sm-4">
                         <div class="contact-us-detail">
-                            <i class="fa fa-mail-reply color-5"></i>
+                            <i class="fas fa-reply color-5"></i>
                             <p><a href="mailto:davidpccu@gmail.com">davidpccu@gmail.com</a></p>
                         </div>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
                         <div class="contact-us-detail">
-                            <i class="fa fa-clock-o color-3"></i>
+                            <i class="far fa-clock-o color-3"></i>
                             <p>Mon - Fri 08:30 – 18:00</p>
                         </div>
                     </div>
@@ -441,9 +453,9 @@
 
         <div class="margin-top-80">
             <ul class="social-icon">
-                <li><a href="#" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/qq2704/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="https://github.com/davidpccu" target="_blank" class="github"><i class="fa fa-github"></i></a></li>
+                <li><a href="#" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/qq2704/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://github.com/davidpccu" target="_blank" class="github"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://lwsu.com.tw/Blog/" target="_blank" class="skype"><i class="fa fa-rss"></i></a></li>
                 <!--
                 <li><a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></li>
