--- a/homepage/index.html
+++ b/homepage/index.html
@@ -6,16 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>★╮麻糬我的最愛首頁╭★</title>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 </head>
 
 <body>
     <div data-role="page" data-theme="c">
         <div data-role="header" data-position="fixed" data-add-back-btn="true">
             <a href="#" data-icon="back" class="ui-btn-left" data-rel="back">返回</a>
-            <a href="http://goo.gl/BnaUfG" class="ui-btn-right" rel="external" data-icon="star" target="_blank">SCE 班表</a>
+            <a href="https://goo.gl/BnaUfG" class="ui-btn-right" rel="external" data-icon="star" target="_blank">SCE 班表</a>
             <h1>麻糬『常用網站』- 首頁</h1>
         </div>
         <!-- Ende header -->
