--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- SEO -->
     <meta name="description" content="Owen's Web">
     <meta name="author" content="Owen">
-    <meta name="url" content="https://lwsu.com.tw/">
+    <meta name="url" content="https://davidpccu.github.io/">
     <meta name="copyright" content="Owen Private">
     <meta name="robots" content="noindex">
 
@@ -86,7 +86,7 @@
                                         </li>
                                         <li><a class="smoth-scroll" href="#contact">Contact</a>
                                         </li>
-                                        <li><a class="smoth-scroll" target="_blank" href="https://lwsu.com.tw/Blog/">Blog</a>
+                                        <li><a class="smoth-scroll" target="_blank" href="https://davidpccu.github.io/Blog/">Blog</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -456,7 +456,7 @@
                 <li><a href="#" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="https://www.instagram.com/qq2704/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://github.com/davidpccu" target="_blank" class="github"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://lwsu.com.tw/Blog/" target="_blank" class="skype"><i class="fa fa-rss"></i></a></li>
+                <li><a href="https://davidpccu.github.io/Blog/" target="_blank" class="skype"><i class="fa fa-rss"></i></a></li>
                 <!--
                 <li><a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#" target="_blank" class="google-plus"><i class="fa fa-google-plus"></i></a></li>
@@ -479,11 +479,11 @@
                 </div>
 
                 <div class="col-md-4 text-center">
-                    <p>© Copyright 2017 lwsu.</p>
+                    <p>© Copyright 2019 lwsu.</p>
                 </div>
 
                 <div class="col-md-4 uipasta-credit text-right">
-                    <a href="https://lwsu.com.tw/Blog/" target="_blank" title="My Blog">My Blog</a>
+                    <a href="https://davidpccu.github.io/Blog/" target="_blank" title="My Blog">My Blog</a>
                 </div>
 
             </div>
