--- a/homepage/index.html
+++ b/homepage/index.html
@@ -142,6 +142,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://shopee.tw/">
+                        <h1>蝦皮購物</h1>
+                    </a>
+                </li>
+                <li>
                     <a href="http://www.ruten.com.tw/">
                         <h1>露天</h1>
                     </a>
