--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <hr>
                     <p>程式設計是我目前的主要工作，會讓我走上程式設計這條路是因為高中對電腦產生了興趣， 所以大學選擇了資訊工程系就讀，也因為資工系的課程內容讓我對程式設計有了基礎概念。 在學期間做了許多實作練習，也嘗試將我的專長與生活上做了結合，例如：架設工讀生班表網站、教室設備通知提醒程式、讀取期交所網站產生報表、台鐵購票小幫手、基金小工具...等，累積程式設計上相關經驗與解決問題的能力。
                     </p>
-                    <p>目前擁有3年以上的程式開發經驗，擅長ASP.NET、C#、JavaScript、資料庫等技術，具備程式架構設計的能力。主要範疇涵蓋電子商務、旅遊資訊及管理系統等。未來也希望能有更多的成長與發展的機會。</p>
+                    <p>目前擁有5年以上的程式開發經驗，擅長ASP.NET、C#、JavaScript、Web API、MS-SQL等技術，具備程式架構設計的能力。主要範疇涵蓋電子商務、行動支付、ERP管理系統等。未來也希望能有更多的成長與發展的機會。</p>
                     <h3>My Savor</h3>
                     <hr>
                     <p>熱愛Coding和其他人一起合作開發
@@ -169,7 +169,7 @@
                         <i class="fab fa-html5 fa-3x color-5"></i>
                         <h3>HTML5、CSS3</h3>
                         <hr>
-                        <p>高中開始自學Html，對於HTML、CSS有基本的認知，目前用於網頁框架、頁面排版</p>
+                        <p>對於HTML、CSS有基本的認知，目前用於網頁框架、頁面排版</p>
                     </div>
                 </div>
 
@@ -178,7 +178,7 @@
                         <i class="fa fa-code color-3"></i>
                         <h3>ASP.NET</h3>
                         <hr>
-                        <p>在學時，有使用過VB、C++，目前使用C#為主，撰寫功能、API串接、邏輯運算上的程式</p>
+                        <p>目前使用C#為主，撰寫功能、邏輯運算上的程式</p>
                     </div>
                 </div>
 
@@ -193,10 +193,19 @@
 
                 <div class="col-md-4 col-sm-6">
                     <div class="abilities-detail">
+                        <i class="fab fa-codepen fa-3x color-6"></i>
+                        <h3>Web API</h3>
+                        <hr>
+                        <p>使用Web API，規劃架構並實作，串接各家行動支付錢包，提供商家金流整合服務</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="abilities-detail">
                         <i class="fab fa-js fa-3x color-6"></i>
                         <h3>JavaScript</h3>
                         <hr>
-                        <p>使用ES5、ES6 於網頁上，相信未來JS會是主要趨勢，這部分仍有很多新技術要學習</p>
+                        <p>使用ES5、ES6 於網頁開發上，並使用ＮodeJS撰寫許多爬蟲工具，相信未來JS會是主要趨勢，這部分仍有很多新技術要學習</p>
                     </div>
                 </div>
 
@@ -254,7 +263,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <ul class="timeline">
-                        <li class="timeline-inverted slideanim">
+                        <!-- <li class="timeline-inverted slideanim">
                             <div class="timeline-image">
                                 <img class="img-rounded img-responsive" src="images/bg/hhhs.png" alt="">
                             </div>
@@ -266,8 +275,8 @@
                                 <div class="timeline-body">
                                 </div>
                             </div>
-                        </li>
-                        <li class="slideanim">
+                        </li> -->
+                        <li class="timeline-inverted slideanim">
                             <div class="timeline-image">
                                 <img class="img-rounded img-responsive" src="images/bg/pccu.png" alt="">
                             </div>
@@ -282,13 +291,13 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted slideanim">
+                        <li class="slideanim">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="images/bg/roc.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>August 2014 - August 2015</h4>
+                                    <h4>ugust 2014 - August 2015</h4>
                                     <h4 class="subheading">Agency 新北地檢署</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -297,18 +306,33 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="slideanim">
+                        <li class="timeline-inverted slideanim">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="images/bg/cola.gif" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>September 2015 - Now </h4>
+                                    <h4>September 2015 - November 2020</h4>
                                     <h4 class="subheading">Cola Tour 可樂旅遊</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-danger">系統研發工程師</p>
                                     <p class="text-muted">ASP.NET, C#, SQL, HTML5, CSS, JavaScript, jQuery</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slideanim">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="images/bg/taishin.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>December 2020 - Now </h4>
+                                    <h4 class="subheading"> Taishin 台新金控</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-danger">資深程式設計師</p>
+                                    <p class="text-muted">ASP.NET, C#, SQL, Ｗeb API</p>
                                 </div>
                             </div>
                         </li>
@@ -479,7 +503,7 @@
                 </div>
 
                 <div class="col-md-4 text-center">
-                    <p>© Copyright 2019 lwsu.</p>
+                    <p>© Copyright 2021 lwsu.</p>
                 </div>
 
                 <div class="col-md-4 uipasta-credit text-right">
