--- a/homepage/index.html
+++ b/homepage/index.html
@@ -83,35 +83,40 @@
             <ul data-role="listview" style="background: #ffffff;">
 
                 <li>
-                    <a href="http://tw.yahoo.com">
+                    <a href="https://tw.yahoo.com">
                         <h1>ＹＡＨＯＯ</h1>
                     </a>
                     <span class="ui-li-count">奇摩</span>
                 </li>
                 <li>
-                    <a href="http://www.google.com.tw">
+                    <a href="https://www.google.com.tw">
                         <h1>GOOGLE</h1>
                     </a>
                     <span class="ui-li-count">谷哥大神</span>
                 </li>
                 <li>
-                    <a href="http://www.pchome.com.tw/">
+                    <a href="https://www.pchome.com.tw/">
                         <h1>PCHOME</h1>
                     </a>
-                    <span class="ui-li-count">E-mail</span>
+                    <span class="ui-li-count">24HR購物</span>
                 </li>
                 <li>
-                    <a href="http://zh-tw.facebook.com/">
+                    <a href="https://zh-tw.facebook.com/">
                         <h1>FaceBook</h1>
                     </a>
                 </li>
                 <li>
-                    <a href="http://instagram.com/">
+                    <a href="https://instagram.com/">
                         <h1>Instagram</h1>
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.dcard.tw/">
+                    <a href="https://twitter.com/">
+                        <h1>Twitter</h1>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.dcard.tw/">
                         <h1>Dcard</h1>
                     </a>
                     <span class="ui-li-count">校園PTT</span>
@@ -297,7 +302,7 @@
                     <p>● 14/11/9 &nbsp;&nbsp;新系統上線測試中!</p>
                     <p></p>
                     <p>
-                        <font color="#808080" size="2">&copy; 2015 All Rights Reserved. by lwsu</font>
+                        <font color="#808080" size="2">&copy; 2021 All Rights Reserved. by lwsu</font>
                     </p>
                     <p>
                         <font color="#808080" size="2">最佳環境Google Chrome 17.0+、解析度1440×900</font>
