--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
                                     <h4 class="subheading"> Taishin 台新金控</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-danger">資深程式設計師</p>
-                                    <p class="text-muted">ASP.NET, C#, SQL, Ｗeb API</p>
+                                    <p class="text-danger">系統分析師</p>
+                                    <p class="text-muted">.Net Core, K8S, SQL</p>
                                 </div>
                             </div>
                         </li>
@@ -503,7 +503,7 @@
                 </div>
 
                 <div class="col-md-4 text-center">
-                    <p>© Copyright 2022 lwsu.</p>
+                    <p>© Copyright 2023 lwsu.</p>
                 </div>
 
                 <div class="col-md-4 uipasta-credit text-right">
